--- a/src/010-はじめに.md
+++ b/src/010-はじめに.md
@@ -14,13 +14,10 @@
 - [https://github.com/azusa/techbookfest5-packer](https://github.com/azusa/techbookfest5-packer)
 
 
-文中で取り上げているミドルウェアは、Windows 10 April UpdateのホストOSで動作する以下のバージョンで動作検証を行っています。
+文中で取り上げているミドルウェアは、Windows 10 October 2018 UpdateのホストOSで動作する以下のバージョンで動作検証を行っています。
 
-- CentOS Linux 7 (1804)
-- VirtualBox 5.2.18
-- Vagrant 2.1.5
-- Packer 1.3.1
-- Serverspec 2.41.3
+- Microsoft Visual Studio Enterprise 2017 Version 15.9.6
+
 
 
 
