“書き出した

--- a/src/020-モバイルアプリとCI.md
+++ b/src/020-モバイルアプリとCI.md
@@ -1,15 +1,23 @@
 
 # インフラ自動化における課題
 
-## インフラあるある
+## Conitious Integraion
 
-- 再起動するとアプリケーションに接続できなくなる。ファイヤウォールとかSELinuxとか
-- ロケールとかTime Zoneとかまちまち。サーバーに個性があるんだね！
-- 気づいたらディスクを食い尽くしているログ。ローテーションはどうした
-- その不具合は以前の案件でも対応したやつじゃないですか？
-- えっ脆弱性対応で要アップデート？塩漬けだったからそれ無理
+ビルドやテスト、デプロイの自動化技術を用いて、アプリケーションの結合とリリースを
+速いサイクルで行う事により、開発プロセスの最適化とリードサイクルの短縮を
+目指す、という試みはソフトウェア開発の歴史の速い段階からあります。
+例えば米国コロンビア大学のG. E. Kaiseらが1989年に発表した「Infuse:Infuse: fusing integration test management with change management」[@Kaiser1989]  にその兆しは見ることができます。
 
-## そこで自動化ですよ！でも…
+「Continous Integration」という語を世に初めて生み出したのはUMLをはじめとするオブジェクト指向
+設計の先駆者として知られるGrady Boochとされています。 ^[[https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/](https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/)] ^[[https://dzone.com/articles/continuous-integration-and-its-whereabouts](https://dzone.com/articles/continuous-integration-and-its-whereabouts] 彼は「Object-oriented analysis and design with applications(SECOND EDITION)」[@Booch1994] の中で
+
+> The needs of the micro process dictate that many more internal releases to the development team will be accomplished, with only a few executable releases turned over to external parties. These internal releases represent a sort of continous integration of the system, and exist to force closure of the micro process.
+
+と延べ、
+
+
+## Integration
+
 
 - スクリプトの結果を確認するには本番環境でEdit and Pray
 - dry-runってどこまであてになるの？
