--- a/src/010-はじめに.md
+++ b/src/010-はじめに.md
@@ -4,7 +4,7 @@
 
 ### サポート
 
-本書の内容のサポートについては、以下のサイトで行います。 ^[脚注]
+本書の内容のサポートについては、以下のサイトで行います。
 
 - [http://pub.fieldnotes.jp/](http://pub.fieldnotes.jp/)
 
