--- a/src/020-モバイルアプリとCI.md
+++ b/src/020-モバイルアプリとCI.md
@@ -6,25 +6,33 @@
 ビルドやテスト、デプロイの自動化技術を用いて、アプリケーションの結合とリリースを
 速いサイクルで行う事により、開発プロセスの最適化とリードサイクルの短縮を
 目指す、という試みはソフトウェア開発の歴史の速い段階からあります。
-例えば米国コロンビア大学のG. E. Kaiseらが1989年に発表した「Infuse:Infuse: fusing integration test management with change management」[@Kaiser1989]  にその兆しは見ることができます。
+例えば米国コロンビア大学のG. E. Kaiseらが1989年に発表した「Infuse: fusing integration test management with change management」[@Kaiser1989]  にその兆しは見ることができます。
 
 「Continous Integration」という語を世に初めて生み出したのはUMLをはじめとするオブジェクト指向
-設計の先駆者として知られるGrady Boochとされています。 ^[[https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/](https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/)] ^[[https://dzone.com/articles/continuous-integration-and-its-whereabouts](https://dzone.com/articles/continuous-integration-and-its-whereabouts] 彼は「Object-oriented analysis and design with applications(SECOND EDITION)」[@Booch1994] の中で
+設計の先駆者として知られるGrady Boochとされています。<span class="footnote">[https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/](https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/)</span><span class="footnote">[https://dzone.com/articles/continuous-integration-and-its-whereabouts](https://dzone.com/articles/continuous-integration-and-its-whereabouts) </span>彼は「Object-oriented analysis and design with applications(SECOND EDITION)」[@Booch1994] の中で
 
 > The needs of the micro process dictate that many more internal releases to the development team will be accomplished, with only a few executable releases turned over to external parties. These internal releases represent a sort of continous integration of the system, and exist to force closure of the micro process.
 
 と延べています。
 
 その後エクストリームプログラミング(XP)の提唱者であり、アジャイルマニフェストの発起人である
-Kent Beckは、「エクストリームプログラミング」[@Beck2005] の中で、XPの主要なプラクティスにの一つに継続的インテグレーションを位置づけています。
+Kent Beckは、「エクストリームプログラミング」[@Beck2005] の中で、XPの主要なプラクティスの一つに継続的インテグレーションを位置づけています。
 
-## 
+## CI
 
-- Cruise Control
+CIを支えるオープンソースソフトウェアとして先陣を切ったのは2001年に初めてのバージョンがリリースされた <span class="Footnote">[https://sourceforge.net/projects/cruisecontrol/files/CruiseControl/1.0/](https://sourceforge.net/projects/cruisecontrol/files/CruiseControl/1.0/)</span>  です。
 
-- Hudson - Jenkins
+その後、2005年にSun Mirrosystemsのエンジニアであった川口耕助氏が
+オープンソースソフトウェアとてリリースしたHudsonが、CIの普及に大きな役割を果たします。Hudsonはその後、商標の帰属に関する意見の相違から、Jenkinsと名前を変えてフォークすることとなり、JenkinsがCIについてのデファクトスタンダードの地位を占めることになります。
 
-- 
+## クラウドサービス
+
+この本の主題であるVisual Studio App Centerの運営企業であるMicrosoft社のCIサービスとしては、Azure DevOpsがあります。
+このサービスの発端は、2005年にリリースされたVisual Studio 2005 Team Systemにさかのぼります。このサービスはその後様々な変遷を経て、執筆時点(2019年2月)では、オンプレミス向けの環境ではTeam Foundation Serverとして、クラウドのサービスではAzure DevOpsとしてサービス提供されています。
+
+
+
+
 
 
 
