--- a/src/010-はじめに.md
+++ b/src/010-はじめに.md
@@ -14,9 +14,27 @@
 - [https://github.com/azusa/techbookfest5-packer](https://github.com/azusa/techbookfest5-packer)
 
 
-文中で取り上げているミドルウェアは、Windows 10 October 2018 UpdateのホストOSで動作する以下のバージョンで動作検証を行っています。
+画面のスクリーンショット等、サービスに関する情報については
+執筆時点での最新のものを使用するよう努めていますが、継続的にサービス内容の更新が
+行われていますので最新のサービス内容と差異が出る場合はご容赦ください。
 
-- Microsoft Visual Studio Enterprise 2017 Version 15.9.6
+文中で取り上げているミドルウェアはのホストOSで動作する以下のバージョンで動作検証を行っています。
+
+- Windows 10 Professina lOctober 2018 Update
+- Microsoft Visual Studio Enterprise 2017 Version 15.9.7
+
+- macOS Mojave(10.14.3)
+- Visual Studio for Mac Enterprise 7.8.1.4
+- Xcode Version 10.1
+
+- Pixel3 XL(Android 9)
+- iPhone 8 (iOS12.1.4)
+
+### 表記関係について
+
+本書に記載されている会社名、製品名などは、一般に各社の登録商標または商標、商品名です。
+会社名、製品名については、本文中では©、®、™マークなどは表示していません。
+
 
 
 
