--- a/src/030-モバイルCIの問題点.md
+++ b/src/030-モバイルCIの問題点.md
@@ -1,6 +1,9 @@
 
 ## 環境構築の難しさ
 
+Android SDKやiOS SDKなどのフリーでない商用ライセンスを用いた環境が必要であり、
+Dockerを用いた環境の場合はDocker Hubのprivate repositoryや
+
 ## クラウドの難しさ
 
 
