--- a/src/010-はじめに.md
+++ b/src/010-はじめに.md
@@ -20,8 +20,11 @@
 
 文中で取り上げているミドルウェアはのホストOSで動作する以下のバージョンで動作検証を行っています。
 
-- Windows 10 Professina lOctober 2018 Update
+- Windows 10 Professinal October 2018 Update
 - Microsoft Visual Studio Enterprise 2017 Version 15.9.7
+- C# 7.0
+- .NET Standard 2.0
+- Xamarin.Forms 3.4.0.1008975
 
 - macOS Mojave(10.14.3)
 - Visual Studio for Mac Enterprise 7.8.1.4
