--- a/src/030-モバイルCIの問題点.md
+++ b/src/030-モバイルCIの問題点.md
@@ -4,7 +4,11 @@
 Android SDKやiOS SDKなどのフリーでない商用ライセンスを用いた環境が必要であり、
 Dockerを用いた環境の場合はDocker Hubのprivate repositoryや
 
+## AndroidとiOSの両方のアーキテクチャーを用意する必要
+
 ## クラウドの難しさ
 
+## アプリのCIはサービスで決まり！
 
-
+アプリケーション向けに統合されたCIのサービスとしては
+iOS向けのCIサービスを発祥とするBitrise<span class="footnote">https://www.bitrise.io/</span>や、～などがあげられます。また、Visual Studio Team Servicesgが2018年9月にリブランドされたAzure DevOpsも、Xamarin向けの機能を協力にサポートしています。
