--- a/src/090-その他.md
+++ b/src/090-その他.md
@@ -10,12 +10,18 @@ Microsoft Premier Support Request Portal<span>[https://support.microsoft.com/en-
 
 それ以外のユーザーは、App Centerの画面右下にあるチャットアイコンから、チャットによるサポートをうけることができます。<span class="footnote">https://intercom.help/appcenter/getting-started/getting-help-with-app-center</span>
 
-
-
+サポートを受ける際には、AppCenterのSDKのログ出力を求められる場合があります。
+AppCenterのSDKのログ出力を有効にするには、`AppCenter`クラスの`Start`メソッドを
+呼び出す前に`AppCenter`クラスの`LogLevel`プロパティーを設定します。
 
 ```
 AppCenter.LogLevel = LogLevel.Verbose;
 ```
+
+ログ出力を有効にした上で、アプリケーションをインストールした端末をPCまたはMacに
+USB接続します。Androidの場合はLogCat、iOSの場合はxCodeでログを確認することができます。
+
+以下は、iOSでAppCenterのログを出力した例です。
 
 ```
 デフォルト	00:14:02.829143 +0900	SpringBoard	Deactivated alertItem: <SBUserNotificationAlert: 0x10ee19f90; title: “CalendarViewer”がサインインのために“appcenter.ms”を使用しようとしています。; source: SafariViewService; pid: 4776>
