--- a/src/010-はじめに.md
+++ b/src/010-はじめに.md
@@ -8,26 +8,22 @@
 
 - [http://pub.fieldnotes.jp/](http://pub.fieldnotes.jp/)
 
-本書のサンプルコードは、以下のGitHubサイトで公開しています。
-
-- [https://github.com/azusa/techbookfest5-vagrant](https://github.com/azusa/techbookfest5-vagrant)
-- [https://github.com/azusa/techbookfest5-packer](https://github.com/azusa/techbookfest5-packer)
 
 
 画面のスクリーンショット等、サービスに関する情報については
 執筆時点での最新のものを使用するよう努めていますが、継続的にサービス内容の更新が
 行われていますので最新のサービス内容と差異が出る場合はご容赦ください。
 
-文中で取り上げているミドルウェアはのホストOSで動作する以下のバージョンで動作検証を行っています。
+文中で取り上げているミドルウェアはホストOSで動作する以下のバージョンで動作検証を行っています。
 
 - Windows 10 Professinal October 2018 Update
-- Microsoft Visual Studio Enterprise 2017 Version 15.9.7
+- Microsoft Visual Studio Enterprise 2019 RC
 - C# 7.0
 - .NET Standard 2.0
 - Xamarin.Forms 3.4.0.1008975
 
-- macOS Mojave(10.14.3)
-- Visual Studio for Mac Enterprise 7.8.1.4
+- macOS Mojave(10.14.4)
+- Visual Studio for Mac Enterprise 7.8.3
 - Xcode Version 10.1
 
 - Pixel3 XL(Android 9)
