--- a/src/010-はじめに.md
+++ b/src/010-はじめに.md
@@ -14,10 +14,10 @@
 執筆時点での最新のものを使用するよう努めていますが、継続的にサービス内容の更新が
 行われていますので最新のサービス内容と差異が出る場合はご容赦ください。
 
-文中で取り上げているミドルウェアはホストOSで動作する以下のバージョンで動作検証を行っています。
+文中で取り上げているミドルウェアは以下バージョンのOSならびにアプリケーションソフトウェアで動作検証を行っています。
 
 - Windows 10 Professinal October 2018 Update
-- Microsoft Visual Studio Enterprise 2019 RC
+- Microsoft Visual Studio Enterprise 2019 16.0.0
 - C# 7.0
 - .NET Standard 2.0
 - Xamarin.Forms 3.4.0.1008975
@@ -27,15 +27,10 @@
 - Xcode Version 10.1
 
 - Pixel3 XL(Android 9)
-- iPhone 8 (iOS12.1.4)
+- iPhone 8 (iOS 12.1.4)
 
 ### 表記関係について
 
 本書に記載されている会社名、製品名などは、一般に各社の登録商標または商標、商品名です。
 会社名、製品名については、本文中では©、®、™マークなどは表示していません。
-
-
-
-
-
 
