--- a/src/045-プロジェクトの作成.md
+++ b/src/045-プロジェクトの作成.md
@@ -1,63 +1,9 @@
-# App Centerの導入
-
-## アカウントの作成
-
-App Centerのアカウント作成は、[https://appcenter.ms/create-account](https://appcenter.ms/create-account)
-より行います。App Centerのアカウントの認証は、以下のサービスのアカウントを用いて行います。
-
-- Microsoftアカウント
-- GitHub
-- Facebook
-- Google
-
-ここでは、GitHubアカウントでのアカウント作成について説明します。
-
-
-- GitHubでのアカウント作成
-
-
-
-
-## 
-
-App Centerのビルドは、以下のスースコード管理に対応しています。
-
-- Azure DevOps
-- GitHub
-- Bitbucket
-
-いずれもクラウドサービス上のGitレポジトリーです。
-
-## GitHub Appsの導入と
-
-
-
-# Projectの作成
-
-
-
-<div class="column">
-
-### アプリケーションのURLは変更不可
-
-App Centerは、アプリケーションの作成後、アプリケーションの名称は画面から変更することができますが、
-アプリケーションに対するApp Center上でのURLは変更することができません。
-
-URLを変更したい場合は、App Center上でのアプリケーションを一度削除した後、再作成することになります。
-
-</div>
-
-
-登録
-
-https://appcenter.ms/create-account
-
-
-## AppCenterからのプロジェクト作成
-
-
+# Xamarin.Forms
 
 ## プロジェクトの作成
+
+App Centerでアプリケーションのビルドをするにあたって、Xamarin.Formsアプリケーションのプロジェクトの
+作成手順を説明します。本書では以下、この手順で作成したプロジェクトの構成をもとにして解説します。
 
 Visual StudioでXamarin.Formsのプロジェクトを作成します。
 
@@ -261,7 +207,7 @@ azusa@SOYOKAZE C:\Users\azusa\source\repos\CalendarViewer [master +0 ~3 -0]
 >
 ```
 
-これらのファイルをGitにコミットします。
+これらのファイルをGitにコミットし、リモートレポジトリーにpushします。
 
 
 ## App CenterのSDKの組み込み
@@ -340,8 +286,54 @@ AppCenter.Start("{App secret]", typeof(Analytics), typeof(Crashes), typeof(Distr
 
 ## CIとビルドスクリプト
 
+例えばJavaアプリケーションの場合、`pom.xml`や`build.gradle`などのビルド処理を行うための
+スクリプトのファイルがプロジェクトのルートに存在します。CIでのビルドを行う場合は、この
+ビルドスクリプトの記述にしたがってビルドを行います。
+
+対して、Xamarin.Formsのように.NET Framrworkのアプリケーションのビルドでは、
+`.sln`や`.csproj`など、IDE(統合開発環境)であるVisual Studioの設定をもとにして
+CIでのビルドを行います。このことはApp CenterやAzure DevOpsなどのAzure上のサービスで
+CIを行う上での大きな特徴になっています。
+
 </div>
 
-AppCenterでは、アプリケーションを作成した後、初回のビルドを行うためには、ブランチごとにビルドに必要な設定を行う必要があります。
+ここまでの例にしたがってプロジェクトを作成すると、以下のディレクトリーおよびファイル
+構成ができあがります。ファイルについては主要なものを記述しました。
 
-次の章以降では、AndroidとiOSのそれぞれで、ビルドに必要な設定を紹介します。
+```
+└─CalendarViewer
+    ├─CalendarViewer
+    │  │  App.xaml
+    │  │  App.xaml.cs
+    │  │  AssemblyInfo.cs
+    │  │  CalendarViewer.csproj
+    │  ├─Models
+    │  ├─Services
+    │  ├─ViewModels
+    │  └─Views
+    │          
+    ├─CalendarViewer.Android
+    │  │  CalendarViewer.Android.csproj
+    │  │  CalendarViewer.Android.csproj.user
+    │  │  MainActivity.cs
+    │  ├─Properties
+    │  │      AndroidManifest.xml
+    │  │      AssemblyInfo.cs
+    │  │      
+    │  └─Resources
+    │              
+    └─CalendarViewer.iOS
+        │  AppDelegate.cs
+        │  CalendarViewer.iOS.csproj
+        │  Entitlements.plist
+        │  Info.plist
+        │  Main.cs
+        │  
+        ├─Assets.xcassets
+        ├─Properties
+        │      AssemblyInfo.cs
+        │      
+        └─Resources
+```
+
+次の章では、この
