--- a/src/010-はじめに.md
+++ b/src/010-はじめに.md
@@ -1,6 +1,10 @@
+<section class="section1">
+
 # はじめに
 
-「Vagrant/Packer/Serverspecではじめるインフラ自動化」は、インフラ自動化における環境構築とCIの運用について、そのノウハウをまとめたものです。
+「Visual Studio App CenterではじめてのXamarin.Forms CI/CD」は、マイクロソフト社が
+提供するサービスVisual Studio App Centerを用いた、Xamarin.Formsアプリケーションの
+継続的インテグレーションについて解説したものです。
 
 ### サポート
 
@@ -16,7 +20,7 @@
 
 文中で取り上げているミドルウェアは以下バージョンのOSならびにアプリケーションソフトウェアで動作検証を行っています。
 
-- Windows 10 Professinal October 2018 Update
+- Windows 10 Professional October 2018 Update
 - Microsoft Visual Studio Enterprise 2019 16.0.0
 - C# 7.0
 - .NET Standard 2.0
@@ -34,3 +38,4 @@
 本書に記載されている会社名、製品名などは、一般に各社の登録商標または商標、商品名です。
 会社名、製品名については、本文中では©、®、™マークなどは表示していません。
 
+</section>
