--- a/src/020-モバイルアプリとCI.md
+++ b/src/020-モバイルアプリとCI.md
@@ -1,32 +1,59 @@
 
-# 継続的インテグレーション
+# モバイルアプリケーションと継続的インテグレーション
 
-## Conitious Integraion
+## Contnious Integration
 
 ビルドやテスト、デプロイの自動化技術を用いて、アプリケーションの結合とリリースを
 速いサイクルで行う事により、開発プロセスの最適化とリードサイクルの短縮を
 目指す、という試みはソフトウェア開発の歴史の速い段階からあります。
-例えば米国コロンビア大学のG. E. Kaiseらが1989年に発表した「Infuse: fusing integration test management with change management」[@Kaiser1989]  にその兆しは見ることができます。
+例えば米国コロンビア大学のG. E. Kaiser氏らが1989年に発表した「Infuse: fusing integration test management with change management」[@Kaiser1989]  にその兆しは見ることができます。
 
-「Continous Integration」という語を世に初めて生み出したのはUMLをはじめとするオブジェクト指向
-設計の先駆者として知られるGrady Boochとされています。<span class="footnote">[https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/](https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/)</span><span class="footnote">[https://dzone.com/articles/continuous-integration-and-its-whereabouts](https://dzone.com/articles/continuous-integration-and-its-whereabouts) </span>彼は「Object-oriented analysis and design with applications(SECOND EDITION)」[@Booch1994] の中で
-
-> The needs of the micro process dictate that many more internal releases to the development team will be accomplished, with only a few executable releases turned over to external parties. These internal releases represent a sort of continous integration of the system, and exist to force closure of the micro process.
-
-と延べています。
+「Continuous  Integration」(継続的インテグレーション:CI)という語が世に初めて現れたのは、UMLをはじめとするオブジェクト指向
+設計の先駆者として知られたGrady Booch氏が、1994年に執筆した「Object-oriented analysis and design with applications(SECOND EDITION)」[@Booch1994]とされています。<span class="footnote">[https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/](https://circleci.com/blog/a-brief-history-of-devops-part-iii-automated-testing-and-continuous-integration/)</span><span class="footnote">[https://dzone.com/articles/continuous-integration-and-its-whereabouts](https://dzone.com/articles/continuous-integration-and-its-whereabouts) </span>
 
 その後エクストリームプログラミング(XP)の提唱者であり、アジャイルマニフェストの発起人である
-Kent Beckは、「エクストリームプログラミング」[@Beck2005] の中で、XPの主要なプラクティスの一つに継続的インテグレーションを位置づけています。
+Kent Beckが、「エクストリームプログラミング」[@Beck2005] の中で、エクストリームプログラミング(XP)の主要なプラクティスの一つに継続的インテグレーションを位置づけました。
 
 ## CI
 
-CIを支えるオープンソースソフトウェアとして先陣を切ったのは2001年に初めてのバージョンがリリースされた <span class="Footnote">[https://sourceforge.net/projects/cruisecontrol/files/CruiseControl/1.0/](https://sourceforge.net/projects/cruisecontrol/files/CruiseControl/1.0/)</span>  です。
+CIを支えるオープンソースソフトウェアとして先陣を切ったのは2001年に初めてのバージョンがリリースされた <span class="footnote">[https://sourceforge.net/projects/cruisecontrol/files/CruiseControl/1.0/](https://sourceforge.net/projects/cruisecontrol/files/CruiseControl/1.0/)</span>  CruiseControlです。
 
 その後、2005年にSun Mircosystemsのエンジニアであった川口耕助氏が
-オープンソースソフトウェアとてリリースしたHudsonが、CIの普及に大きな役割を果たします。Hudsonはその後、商標の帰属に関する、Sun Microsystemsを買収したOracleとコミュニティーの意見の相違から、Jenkinsと名前を変えてフォークしました。その後、JenkinsがCIについてのデファクトスタンダードの地位を占めることになります。
+オープンソースソフトウェアとしてリリースしたHudsonが、CIの普及に大きな役割を果たします。Hudsonはその後、Sun Microsystemsを買収したOracleとコミュニティーの間の商標の帰属に関する意見の相違から、Jenkinsと名前を変えてフォークしました。その後、JenkinsがCIについてのデファクトスタンダードの地位を占めることになります。
 
 ## クラウドサービス
 
+CIをはじめとするビルド環境のクラウドサービスの先駆けは、2011年にGitHubにホスティングしているOSS向けのサービスとしてはじまった、Travis CIがあげられます。<span class="footnote">[https://blog.travis-ci.com/2012-12-30-2012-at-travis-ci-what-a-blast/](https://blog.travis-ci.com/2012-12-30-2012-at-travis-ci-what-a-blast/)</span>
+
+また同じく2011年の設立であるCircleCIも、CIのクラウドサービスとして有力な地位を得ています。。
+
 この本の主題であるVisual Studio App Centerの運営企業であるMicrosoft社のCIサービスとしては、Azure DevOpsがあります。
 
-このサービスの発端は、2005年にリリースされたVisual Studio 2005 Team Systemにさかのぼります。このサービスはその後様々な変遷を経て、執筆時点(2019年2月)では、オンプレミス向けの環境ではTeam Foundation Serverとして、クラウドのサービスではAzure DevOpsとしてサービス提供されています。
+このサービスの発端は、2005年にリリースされたVisual Studio 2005 Team Systemにさかのぼります。このサービスはその後様々な変遷を経て、執筆時点(2019年4月)では、オンプレミス向けの環境ではAzure DevOps Serverとして、クラウドのサービスではAzure DevOpsとしてサービス提供されています。
+
+## モバイルアプリケーションにおけるCIの構築の問題点
+
+モバイルアプリケーションをCIの環境上でビルドするには、Android SDKやiOS SDKなどのフリーでないライセンスのソフトウェアが必要です。
+
+この場合、Dockerを用いたビルド環境で使用するにはprivate repositoryをホスティングして、組織の内部でイメージの管理をする必要があります。
+
+それに加えてアプリケーションにおけるCIの構築の案件の場合、シミュレーターを用いた動作テストを要件となる場合が多く、環境構築に複雑な手順を伴うことになります。
+
+Xamarinアプリケーションのビルドの前提となる .NET Coreやmsbuild等はオープンソースのライセンスで提供されており、CIのビルド環境にも商用ライセンスなしで導入可能です。
+
+しかし、iOSのXamarinアプリケーションをビルドするにはXCodeならびにそのライセンスが必要であり、ビルド環境としてmacOSとmacのマシンを用意する必要が出てきます。
+
+また、クロスプラットフォームのXamarinアプリケーションをビルドする環境を構築するには、.NET Framrwork、Java、XCodeなど、様々なソフトウェアやアーキテクチャーを横断して把握する必要があります。このことは、クロスプラットフォームのXamarinアプリケーションをオンプレミスの環境で構築することを難易度の高いものとしています。
+
+サーバーサイドのアプリケーションの自動ビルドは、SSHやパブリッククラウドのCLIを通して動作環境にCIのビルド環境からデプロイすることが可能です。
+
+しかしアプリケーションの場合は、インストーラーやアプリケーションのパッケージを、どのようにインストールする端末に配布するかという筋道も含めて考える必要があります。
+
+## モバイルアプリケーション
+
+このような前提を踏まえて、モバイルアプリケーションのCIを推進することを考えます。その時に押さえる点は、ビルド環境やデバイスファームを用いた実機テスト、端末への配布など、一括してサポートすることの出来るクラウドサービスを活用して、構築することです。
+
+アプリケーション向けに統合されたCIのサービスとしては
+iOS向けのCIサービスを発祥とするBitrise<span class="footnote">https://www.bitrise.io/</span>があげられます。また、Visual Studio Team Serviceが2018年9月にリブランドされたAzure DevOpsも、Xamarin向けの機能を協力にサポートしています。
+
+本書では、Azure DevOpsと同じくマイクロソフト社が提供するVisual Studio App Centerを用いて、Xamarin.Formsアプリケーションのビルドと配布の環境構築を説明していきます。
