--- a/src/980-あとがき.md
+++ b/src/980-あとがき.md
@@ -13,12 +13,16 @@
 
 ### 著者略歴
 
-大中浩行(\@setoazusa)
+本文:大中浩行(\@setoazusa)
 
 TDD Boot Camp(TDDBC)を主催するコミュニティーTDD Base Campを中心として、TDDを始めとするアジャイル開発
 プラクティスの普及活動に従事。本職はインフラ構築・運用および、TDDや継続的デリバリーに関する技術支援など。
 Microsoft MVP for Developer Technologies(2018～)
 
 [http://hiroyuki.fieldnotes.jp/](http://hiroyuki.fieldnotes.jp/)
+
+イラスト:16号(\@homunculus016)
+
+イラストレーター・漫画家・シナモンロール研究家
 
 
