--- a/src/010-はじめに.md
+++ b/src/010-はじめに.md
@@ -1,6 +1,6 @@
 <section class="section1">
 
-# はじめに
+# 1.はじめに
 
 「Visual Studio App CenterではじめてのXamarin.Forms CI/CD」は、マイクロソフト社が
 提供するサービスVisual Studio App Centerを用いた、Xamarin.Formsアプリケーションの
