--- a/src/020-モバイルアプリとCI.md
+++ b/src/020-モバイルアプリとCI.md
@@ -1,5 +1,5 @@
 
-# モバイルアプリケーションと継続的インテグレーション
+# 2.モバイルアプリケーションと継続的インテグレーション
 
 ## Contnious Integration
 
@@ -25,11 +25,11 @@ CIを支えるオープンソースソフトウェアとして先陣を切った
 
 CIをはじめとするビルド環境のクラウドサービスの先駆けは、2011年にGitHubにホスティングしているOSS向けのサービスとしてはじまった、Travis CIがあげられます。<span class="footnote">[https://blog.travis-ci.com/2012-12-30-2012-at-travis-ci-what-a-blast/](https://blog.travis-ci.com/2012-12-30-2012-at-travis-ci-what-a-blast/)</span>
 
-また同じく2011年の設立であるCircleCIも、CIのクラウドサービスとして有力な地位を得ています。。
+また同じく2011年の設立であるCircleCIも、CIのクラウドサービスとして有力な地位を得ています。
 
 この本の主題であるVisual Studio App Centerの運営企業であるMicrosoft社のCIサービスとしては、Azure DevOpsがあります。
 
-このサービスの発端は、2005年にリリースされたVisual Studio 2005 Team Systemにさかのぼります。このサービスはその後様々な変遷を経て、執筆時点(2019年4月)では、オンプレミス向けの環境ではAzure DevOps Serverとして、クラウドのサービスではAzure DevOpsとしてサービス提供されています。
+Azure Devopsの発端は、2005年にリリースされたVisual Studio 2005 Team Systemにさかのぼります。このサービスはその後様々な変遷を経て、執筆時点(2019年4月)では、オンプレミス向けの環境ではAzure DevOps Serverとして、クラウドのサービスではAzure DevOpsとしてサービス提供されています。
 
 ## モバイルアプリケーションにおけるCIの構築の問題点
 
@@ -51,7 +51,7 @@ Xamarinアプリケーションのビルドの前提となる .NET Coreやmsbuil
 
 ## モバイルアプリケーション
 
-このような前提を踏まえて、モバイルアプリケーションのCIを推進することを考えます。その時に押さえる点は、ビルド環境やデバイスファームを用いた実機テスト、端末への配布など、一括してサポートすることの出来るクラウドサービスを活用して、構築することです。
+このような前提の上で、モバイルアプリケーションのCIを推進することを考えます。その際に望ましいのは、ビルド環境やデバイスファームを用いた実機テスト、端末への配布など、一括してサポートすることの出来るクラウドサービスを活用して、構築することです。
 
 アプリケーション向けに統合されたCIのサービスとしては
 iOS向けのCIサービスを発祥とするBitrise<span class="footnote">https://www.bitrise.io/</span>があげられます。また、Visual Studio Team Serviceが2018年9月にリブランドされたAzure DevOpsも、Xamarin向けの機能を協力にサポートしています。
