--- a/src/090-その他.md
+++ b/src/090-その他.md
@@ -1,4 +1,4 @@
-# その他
+# 10.その他
 
 ## ロードマップ
 
@@ -93,11 +93,14 @@ NuGetのライブラリーを取得する場合は、ソリューションのフ
 
 NuGetのフィードをAzure DevOps上で構築する場合、
 `USER_VARIABLE`と`PAT`はAzure DevOpsのPersonal Access Tokenとして
-作成します。`USER_VARIABLE`はAzure DevOpsのorganization名です。
+作成します。`USER_VARIABLE`はAzure DevOpsのorganization名です。<span class="footnote">Azure DevOpsのURL中 https://dev.azure.com/(orgnization名) の部分</span>
 
 この場合、ローカルの環境でNuGetパッケージを復元する場合、
 WindowsのVisual Studio上では、Azure DevOpsのアカウントが
 作成されているAzure ADのアカウントを使用して認証します。
 
-これに対しVisual Studio for Macでは、Azure DevOpsのPersonal Access Tokenを
-使用して認証を行います。
+これに対しVisual Studio for Macでは、[@fig:img_090_010_image]のダイアログが表示された際に、
+Azure DevOpsのPersonal Access Tokenを使用して認証を行います。
+
+![Visual Studio for Macの認証ダイアログ](img/090/img-090-010.png){#fig:img_090_010_image}
+
