--- a/src/980-あとがき.md
+++ b/src/980-あとがき.md
@@ -2,26 +2,33 @@
 
 「すいーとみゅーじっく vol.7」です。
 
-なぜ毎回執筆の度に検証と執筆のスケジュールがタイトになるのか、と思います。特に今回は、執筆の追い込み時期に引っ越して一人暮らしを始めるという無謀なことを…このあとがきを書いているのは入稿当日です。
+もとより同人誌ですから、売れ筋を狙えるかよりかは自分が書きたいことが優先なわけですが、
+それにしてもXamarin.FormsとVisual Studio App Centerというテーマの掛け合わせはどれくらいの方にリーチするのか自信がありません。
 
-前書のあとがきに書いたようにアプリ開発のCIの話にするか、それとも最近興味のあるAzureの話か…と8月頭まで内容が決まらなかったのですが、結局は、今年に入ってから力を入れていたインフラ自動化についてのコンテンツになりました。シンプルな章立てになりましたが、業務で検証を行った際の内容を裏付けとして記述しています。
+ただ本書の内容は、本職におけるXamarin.Formsアプリケーション開発における継続的インテグレーション(CI)環境構築に
+あたって、試行錯誤を重ねた跡そのものです。ここに記したことは、Xamarinやモバイルアプリケーション開発の
+エコシステムに習熟した方には自明な部分が多いですが、著者のようなサーバーサイドのCIの環境構築に習熟しているエンジニアが、
+モバイルアプリケーションのCIに取り組んだ時にどのようなポイントを重視すべきかということについては、十二分に記せたと思っています。
 
-なお、本書よりレイアウトをPandocによるLatexベースのレイアウトから、CSS組版に切り替えました。CSS組版のメリットである、自由なレイアウトはスケジュールの都合で実現できていませんが、これからもCSS組版にチャレンジしていきたいと思っています。
+App Centerの大きな特徴である、デバイスファーム上のUIテストについて記せなかったのが心残りですが、今後コミュニティーの中でアウトプットしていきたいと考えています。
+
+GitHub上で公開されているApp Centerハンズオン<span class="footnote">[https://github.com/ytabuchi/AppCenterSample](https://github.com/ytabuchi/AppCenterSample)</span>をはじめとして有用なコンテンツを公開下さった。Xamarinコミュニティーのみなさんありがとうございました。本書の内容が少しでもコミュニティーへの貢献になれればと思っています。
+
+本書のイラストは旧知である16号氏に依頼したのですが、「iPhoneっぽいスマホとAndroidっぽいスマホを持った男女」というオーダーを素敵な表紙に起こしてくれました。ありがとうございました。
 
 それでは、次号も機会がありましたらよろしくお願いします。
 
-
 ### 著者略歴
 
-本文:大中浩行(\@setoazusa)
+<span class="profile">本文:大中浩行(\@setoazusa)</span>
 
 TDD Boot Camp(TDDBC)を主催するコミュニティーTDD Base Campを中心として、TDDを始めとするアジャイル開発
-プラクティスの普及活動に従事。本職はインフラ構築・運用および、TDDや継続的デリバリーに関する技術支援など。
+プラクティスの普及活動に従事。本職はインフラ構築・運用および、TDDや継続的デリバリーに関する技術支援。
 Microsoft MVP for Developer Technologies(2018～)
 
 [http://hiroyuki.fieldnotes.jp/](http://hiroyuki.fieldnotes.jp/)
 
-イラスト:16号(\@homunculus016)
+<span class="profile">イラスト:16号(\@homunculus016)</span>
 
 イラストレーター・漫画家・シナモンロール研究家
 
