--- a/src/020-モバイルアプリとCI.md
+++ b/src/020-モバイルアプリとCI.md
@@ -54,6 +54,6 @@ Xamarinアプリケーションのビルドの前提となる .NET Coreやmsbuil
 このような前提の上で、モバイルアプリケーションのCIを推進することを考えます。その際に望ましいのは、ビルド環境やデバイスファームを用いた実機テスト、端末への配布など、一括してサポートすることの出来るクラウドサービスを活用して、構築することです。
 
 アプリケーション向けに統合されたCIのサービスとしては
-iOS向けのCIサービスを発祥とするBitrise<span class="footnote">https://www.bitrise.io/</span>があげられます。また、Visual Studio Team Serviceが2018年9月にリブランドされたAzure DevOpsも、Xamarin向けの機能を協力にサポートしています。
+iOS向けのCIサービスを発祥とするBitrise<span class="footnote">[https://www.bitrise.io/](https://www.bitrise.io/)</span>があげられます。また、Visual Studio Team Serviceが2018年9月にリブランドされたAzure DevOpsも、Xamarin向けの機能を協力にサポートしています。
 
 本書では、Azure DevOpsと同じくマイクロソフト社が提供するVisual Studio App Centerを用いて、Xamarin.Formsアプリケーションのビルドと配布の環境構築を説明していきます。
