--- a/src/045-プロジェクトの作成.md
+++ b/src/045-プロジェクトの作成.md
@@ -31,7 +31,7 @@ App Centerでアプリケーションのビルドをするにあたって、Xama
 
 ### Xamarin.Formsのソリューション名の制約
 
-Visual Studio For Macでは、Xamarin.Formsのプロジェクトを読み込む時にソリューション名に`-`または`_`を含を含んでいると、
+Visual Studio For Macでは、Xamarin.Formsのプロジェクトを読み込む時にソリューション名に`-`または`_`を含んでいると、
 Androidプロジェクトの`MainActivity.cs`で`The type or namespace name 'App' could not be found `というコンパイルエラーが発生する問題があります。<span class="footnote">[https://stackoverflow.com/a/52317040](https://stackoverflow.com/a/52317040)</span>この問題を回避するためには、
 プロジェクト作成時の「新しいプロジェクト」画面で、`-`または`_`を含まない名前でプロジェクトを作成します。
 
